// ─────────────────────────────────────────
// SILAPOR - Database Schema (DBML)
// Generated from init.sql
// ─────────────────────────────────────────

// Users: pelapor & admin
Table users {
  id        int [pk, increment]
  nama      varchar(100) [not null]
  email     varchar(100) [unique, not null]
  password  varchar(255) [not null]
  role      varchar(30) [not null, default: 'pelapor']
  unit      varchar(100)
  created_at timestamp [default: 'now()']
}

// Lokasi: gedung/ruangan yang dipetakan ke admin penanggung jawab
Table lokasi {
  id         int [pk, increment]
  nama       varchar(100) [not null]
  gedung     varchar(100)
  fakultas   varchar(100)
  level      varchar(20) [not null]
  assigned_to int [ref: > users.id]
  created_at timestamp [default: 'now()']
}

// Laporan: tiket kerusakan fasilitas
Table laporan {
  id          int [pk, increment]
  nomor_tiket varchar(20) [unique, not null]
  pelapor_id  int [not null, ref: > users.id]
  lokasi_id   int [not null, ref: > lokasi.id]
  jenis       varchar(100) [not null]
  deskripsi   text
  prioritas   varchar(10) [default: 'sedang']
  foto_url    text
  status      varchar(20) [default: 'menunggu']
  assigned_to int [ref: > users.id]
  created_at  timestamp [default: 'now()']
  updated_at  timestamp [default: 'now()']
}

// Riwayat tiket: audit trail perjalanan tiket
Table riwayat_tiket {
  id          int [pk, increment]
  laporan_id  int [not null, ref: > laporan.id]
  dari_admin int [ref: > users.id]
  ke_admin   int [ref: > users.id]
  status_lama varchar(50)
  status_baru varchar(50)
  catatan     text
  waktu       timestamp [default: 'now()']
}

// FCM Tokens: push notification
Table fcm_tokens {
  id         int [pk, increment]
  user_id    int [unique, not null, ref: > users.id]
  token      text [not null]
  updated_at timestamp [default: 'now()']
}

// ─────────────────────────────────────────
// RELASI
// ─────────────────────────────────────────

// Relasi sudah didefinisikan inline di tiap kolom [ref: > ...]
